Correzione errori ortografici

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -133,7 +133,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\midrule
 	\textbf{Nome} & VARCHAR & Identifica il nome del vino\\
 	\midrule
-	GradazioneAlcolica & TINYINt & Identifica il grado di alcol del vino\\
+	GradazioneAlcolica & TINYINT & Identifica il grado di alcol del vino\\
 	\midrule
 	TempoFermentazione & TINYINT & Rappresenta i giorni che sono serviti per la fermentazione del vino\\
 	\midrule
