--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -1,2 +1,7 @@
 \textbf{\large{Indirizzo}}\\
 Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Acquirente e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{Stato, Città, Provincia, CAP, Via, NumCivico}.
+
+\begin{flushleft}
+\textbf{\large{Date}}\\
+Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}.
+\end{flushleft}
