--- a/src/analisiRequisiti/_main.tex
+++ b/src/analisiRequisiti/_main.tex
@@ -1,5 +1,9 @@
-\section{introduzione}
-    \input{src/analisiRequisiti/introduzione}
+%\section{introduzione}
+ %   \input{src/analisiRequisiti/introduzione}
 
-\section{considerazioni}
-    \input{src/analisiRequisiti/considerazioni}
+%\section{considerazioni}
+ %   \input{src/analisiRequisiti/considerazioni}
+ 
+ \input{src/analisiRequisiti/analisi_requisiti.tex}
+    
+    
