--- a/src/abstract/abstract.tex
+++ b/src/abstract/abstract.tex
@@ -1,12 +1,2 @@
-Storia antica quasi 10000 anni 
-
-Fa parte della cultura (religiosa e non) di moltissimi
-
-Italia maggiore esportatore di vino al mondo
-
-Fatturato +7.5 nel 2018 
-
-Il fatturato maggiore lo hanno due colossi cooperativi -> cooperative -> e' un ambiente spesso gestito da piccole aziende agricole 
-con poche risorse e talvolta poca/arretrata organizzazione
-
-Descrizione societa' fittizia 
+La cantina \emph{Nome cantina} venne fondata nel 1867 da due agricoltori Padovani che avevano una passione in comune, quella per il vino del proprio territorio. Appena iniziata l'attivià hanno ricevuto subito un notevole apprezzamento da parte di tutto il suolo locale, decidendo così di ampliare i propri orrizonti e spingersi oltre i confini locali. Nel corsi degli anni le richieste del proprio vino sono cresciute esponenzialmente e hanno portato una forte rimodernizzaziobne nella \emph{Nome cantina}, su tutti i fronti. Ora la cantina non produce più vino solo del proprio territorio, ma anche vini provenienti da tutta Italia. Inoltre, il consenso ottenuto dopo anni ha spinto la cantina a produrre non solo per le varie aziende esterne, ma anche in proprio, decidendo di aprire molti negozi sparsi in tutta la nazione sotto il nome di \emph{Nome Negozi}.\\
+Dopo il ridimensionamento sul comparto produttivo, si è deciso di fare un passo avanti anche riguardo il comparto tecnologico, portando alla creazione di un database apposito. Il suddetto serve per supportare l'azienda nel lavoro di tutti i giorni, cioè la \emph{l'acquisto delle materie prime, la produzione, la vendita delle proprie bottigle, l'oganizzazione dei vari reparti lavorativi e la promozione del proprio marchio tramite eventi nazionali}.
