--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,4 +1,4 @@
-\section{Analisi Entita'}\label{analisi_entita}
+\section{Analisi entita'}\label{analisi_entita}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
 \section{Analisi delle relazioni e delle cardinalità}
