Inizio strutturazione dei requisiti

--- a/src/analisiRequisiti/_main.tex
+++ b/src/analisiRequisiti/_main.tex
@@ -6,4 +6,8 @@
  
  \input{src/analisiRequisiti/analisi_requisiti.tex}
     
-    
+  \section{Strutturazione dei requisiti}
+   \input{src/analisiRequisiti/strutturazione_requisiti.tex}
+  
+  
+  
