--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -3,7 +3,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}} \\
 		\midrule
-		La bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini.\\
+		La bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini. Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità\\
 		\bottomrule
 	\end{tabular}
 
@@ -44,6 +44,120 @@
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNETO}} \\
 		\midrule
 		Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione e il tipo di terreno di piantagione.\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A FORNITORE}} \\
+		\midrule
+		L'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
+I fornitori sono identificati tramite un identificativo univoco e hanno il loro prezzo per prodotto, specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TAPPO}} \\
+		\midrule
+		I tappi vengono rappresentati tramite la forma ed il materiale. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA}} \\
+		\midrule
+		Le bottigle vengono identificate da capacità e colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per le bottiglie\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}} \\
+		\midrule
+		Per l'ordine, identificato univocamente, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate e dal prezzo di spedizione). Ogni ordine è affidato ad un corriere. Importante identificare la data  di spedizione e di ricezione dell'ordine. Ogni ordine è venduto ad un'azienda o ad un privato\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A CORRIERE}} \\
+		Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un'identificativo ed un nome commerciale.\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ACQUIRENTE}} \\
+		Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un identificativo. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
+Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}} \\
+		Gli eventi hanno una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento partecipano delle persone. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A PARTECIPANTE}} \\
+		A quest'evento partecipano delle persone che si devono registrare e inserire i propri dati (nome, cognome, età).\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A LINEA PRODUTTIVA}} \\
+		Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo. Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante). In ognugno di questi reparti lavora un dipendete in un determinato turno di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A DIPENDENTE}} \\
+		Per ogni dipendete viene registrato il nome, il cognome, lo stipendio e vengono identificati tramite il codice fiscale. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MACCHINARIO}} \\
+		I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data dell'ultima manutenzione e della prossima manutenzione. I macchinari avranno anche un nome commerciale. Le manutenzioni avranno un costo e vengono eseguite da aziende esterne,\\
+		\bottomrule
+	\end{tabular}
+	
+	\vspace{0.5cm}
+	
+	\begin{tabular}{P{16cm}}
+		\toprule
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA MANUTENZIONE}} \\
+		Le aziende di manutenzione sono rappresentate solo dal nome e da un identificativo\\
 		\bottomrule
 	\end{tabular}
 \end{center}
