Aggiunta Nome a fornitori ai vari ER

--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -92,6 +92,8 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
 	\textbf{Id} & VARCHAR &  Identifica univocamente il fornitore\\
+	\midrule
+	Nome & VARCHAR &  Identifiac il nome commerciale del fornitore\\
 	\bottomrule
 \end{tabular}
 	
