--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -22,9 +22,9 @@
 \end{verse} 
 \textbf{Tappo} (\underline{ID}, Forma, Materiale, Quantità)\\
 \textbf{Bottiglia} (\underline{ID}, Capacità, Colore, Quantità)\\
-\textbf{FornitoreTappi} (\underline{ID}, PrezzoAlTappo)\\
-\textbf{FornitoreBottiglie} (\underline{ID}, PrezzoABottiglia)\\
-\textbf{FornitoreUva} (\underline{ID}, PrezzoAlKg)\\
+\textbf{FornitoreTappi} (\underline{ID}, Nome, PrezzoAlTappo)\\
+\textbf{FornitoreBottiglie} (\underline{ID}, Nome, PrezzoABottiglia)\\
+\textbf{FornitoreUva} (\underline{ID}, Nome, PrezzoAlKg)\\
 \textbf{FornisceUva} (\underline{Fornitore, Uva}, Prezzo, Quantità, DataAcquisto)
 \begin{verse}
 	FornisceUva.Fornitore $\to$ FornitoreUva.ID\\
