Correzioni file dopo l'aggiunta del nome a fornitore

--- a/src/analisiRequisiti/_main.tex
+++ b/src/analisiRequisiti/_main.tex
@@ -6,6 +6,12 @@
  
  \input{src/analisiRequisiti/analisi_requisiti.tex}
     
+   \section{Glossario dei termini}
+   \input{src/analisiRequisiti/glossario_termini.tex}
+   
+   \section{Operazioni Tipiche}
+   \input{src/analisiRequisiti/operazioni_tipiche.tex}
+   
   \section{Strutturazione dei requisiti}
    \input{src/analisiRequisiti/strutturazione_requisiti.tex}
   
