--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -93,7 +93,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\midrule
 	\textbf{Id} & VARCHAR &  Identifica univocamente il fornitore\\
 	\midrule
-	Nome & VARCHAR &  Identifiac il nome commerciale del fornitore\\
+	Nome & VARCHAR &  Identifica il nome commerciale del fornitore\\
 	\bottomrule
 \end{tabular}
 	
