--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -1,5 +1,5 @@
 \textbf{\large{Indirizzo}}\\
-Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Acquirente e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}.
+Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta più consona raggruppare le informazioni dell'attributo \textbf{Indirizzo} di \emph{Acquirente e Vigneto}. L'entità \emph{Indirizzo} avrà quindi gli attributi \textbf{ID (VARCHAR), Stato (VARCHAR), Città (VARCHAR), Provincia (VARCHAR), CAP (INTEGER), Via (VARCHAR), NumCivico (INTEGER)}. La chiave primaria sarà \textbf{ID}.
 
 \begin{flushleft}
 \textbf{\large{Date}}\\
