Correzioni ortografiche e logiche

--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -4,11 +4,11 @@ L'uva proviene da un tipo di vigna, identificata da un ID, la quale è coltivata
 Essendo una cantina molto grossa l'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
 I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori.
 I tappi vengono rappresentati tramite la forma ed il materiale, le bottigle da capacità e colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.\\
-Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità.Per l'ordine, identificato univocamente, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate e dal prezzo di spedizione).\\
-Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un'identificativo ed un nome commerciale. Importante identificare la data  di spedizione e di ricezione dell'ordine.\\
-Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un identificativo. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
+Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità. Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate più il prezzo di spedizione).\\
+Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un ID ed un nome commerciale. Importante identificare la data  di spedizione e di ricezione dell'ordine.\\
+Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un ID. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
 Queste aziende sono dei nostri negozi e possono ospitare degli eventi con una tematica che è rappresentata da un nostro vino. Gli eventi vengono definiti tramite il titolo dell'evento e il numero di edizione. A quest'evento partecipano delle persone che si devono registrare e inserire i propri dati (nome, cognome, età). Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
 Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino citato all'inizio. Tutti questi reparti sono identificati tramite un identificativo.\\
 In ognugno di questi reparti lavora un dipendete in un determinato turno di lavoro. Per ogni dipendete viene registrato il nome, il cognome, lo stipendio e vengono identificati tramite il codice fiscale. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
 Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane. I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data dell'ultima manutenzione e della prossima manutenzione. I macchinari avranno anche un nome commerciale.\\
-Le manutenzioni avranno un costo e vengono eseguite da aziende esterne, che sono rappresentato solo dal nome e da un identificativo.
+Le manutenzioni avranno un costo e vengono eseguite da aziende esterne, che sono rappresentato solo dal nome commerciale e da un identificativo.
