--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -15,9 +15,9 @@
 		\midrule
 		Fornitore & Fornisce la cantina su alcuni prodotti. Si suddivide in fornitore d'uva, fornitore di tappi, fornitore di bottiglie &  Uva (fornitore d'uva), Tappo (fornitore di tappi), Bottiglia (fornitore di bottiglie)\\
 		\midrule
-		Tappo & Rappresenta una tipologia di tappo che va ad identificare una bottiglia di vino &  Fornitore (fornitore tappi), Bottiglia di vino\\
+		Tappo & Rappresenta una tipologia di tappo che va assegnato ad una bottiglia di vino &  Fornitore (fornitore tappi), Bottiglia di vino\\
 		\midrule
-		Bottiglia & Rappresenta una tipologia di bottiglia che va ad identificare una bottiglia di vino &  Fornitore (fornitore bottiglie), Bottiglia di vino\\
+		Bottiglia & Rappresenta una tipologia di bottiglia che va assegnata ad una bottiglia di vino &  Fornitore (fornitore bottiglie), Bottiglia di vino\\
 		\midrule
 		Ordine & Rappresenta un ordine di vendita acquistato da un acquirente &  Bottiglia di vino, Corriere, Acquirente\\
 		\midrule
