--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -23,7 +23,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD UVA}} \\
 		\midrule
-		la tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite la tipologia e la vendemmia. L'uva proviene da un tipo di vigna\\
+		La tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite la tipologia e la vendemmia. L'uva proviene da un tipo di vigna. L'uva è fornita da aziende esterne.\\
 		\bottomrule
 	\end{tabular}
 
@@ -84,7 +84,7 @@ I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno u
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}} \\
 		\midrule
-		Per l'ordine, identificato univocamente, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate e dal prezzo di spedizione). Ogni ordine è affidato ad un corriere. Importante identificare la data  di spedizione e di ricezione dell'ordine. Ogni ordine è venduto ad un'azienda o ad un privato\\
+		Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate e dal prezzo di spedizione). Ogni ordine è affidato ad un corriere. Importante identificare la data  di spedizione e di ricezione dell'ordine. Ogni ordine è venduto ad un'azienda o ad un privato\\
 		\bottomrule
 	\end{tabular}
 	
@@ -93,7 +93,7 @@ I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno u
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A CORRIERE}} \\
-		Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un'identificativo ed un nome commerciale.\\
+		Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un ID ed un nome commerciale.\\
 		\bottomrule
 	\end{tabular}
 	
@@ -102,7 +102,7 @@ I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno u
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ACQUIRENTE}} \\
-		Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un identificativo. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
+		Ogni ordine è venduto ad un'azienda o ad un privato che vengono identificati tramite un ID. Inoltre viene registrato il nome, l'email, il telefono e l'indirizzo dell'acquirente a cui verra' spedito l'ordine. Dell'azienda è utile registrare il nome e cognome del referente. Del privato è richiesto anche il cognome oltre al nome. Come spiegato prima per i fornitori, esistono alcune aziende che sono sotto lo stesso gruppo della cantina \emph{Nome Cantina}, le quali vendono le nostre bottigle di vino.\\
 Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
 		\bottomrule
 	\end{tabular}
@@ -157,7 +157,7 @@ Queste aziende sono dei nostri negozi e possono ospitare degli eventi\\
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA MANUTENZIONE}} \\
-		Le aziende di manutenzione sono rappresentate solo dal nome e da un identificativo\\
+		Le aziende di manutenzione sono rappresentate solo dal nome commerciale e da un identificativo\\
 		\bottomrule
 	\end{tabular}
 \end{center}
