--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -285,7 +285,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\toprule
 	\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 	\midrule
-	\textbf{NumBottiglie} & INTEGER &  Rappresenta la quantità delle bottiglie di vino, divise per tipologia, contenute nel magazzino\\
+	\textbf{NumBottiglie} & INTEGER &  Rappresenta la quantità delle bottiglie di vino, divise per tipologia di colore, contenute nel magazzino\\
 	\bottomrule
 \end{tabular}
 
