--- a/src/progettazioneLogica/identificatori_principali.tex
+++ b/src/progettazioneLogica/identificatori_principali.tex
@@ -5,5 +5,5 @@ Oltre agli identificatori visti nella sezione~\ref{analisi_entita}, sono stati a
 	\item Alle entità \emph{Azienda e Priavto} è stato aggiunto l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave referenziale con l'attributo \textbf{ID} di \emph{Acquirente};
 	\item L'entità \emph{NegozioInterno} avrà un attributo \textbf{ID} che sarà chiave primaria e chiave referenziale con l'attributo \textbf{ID} di \emph{Azienda};
 	\item L'entità \emph{Indirzzo} appena aggiunta avrà come chiave primaria l'attributo \textbf{ID} che sarà anche chiave referenziale o con l'attributo \textbf{ID} di \emph{Acquirente o Vigneto};
-	\item E' stato aggiunto l'attributo \textbf{ID} a \emph{Uva, Tappo, Bottiglia, Evento} per rendere più semplice le relazioni con queste entità.
+	\item E' stato aggiunto l'attributo \textbf{ID}, che sarà chiave primaria, a \emph{Uva, Tappo, Bottiglia, Evento} per rendere più semplice le relazioni con queste entità.
 \end{itemize}
