Modifiche nomi di alcuni attributi (PartitaIva), tabelle, relazioni. Aggiunta UltimaManutenzione

--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -1,8 +1,8 @@
 Si vuole realizzare una base di dati per rappresentare al meglio il lavoro della cantina \emph{Nome cantina}. Come prodotto principale c'è la bottiglia di vino che è caratterizzata dal tipo di vino contenuto e dall'annata. Altri dati importanti sono il prezzo per bottiglia, il numero di bottiglie prodotte e vendute, il tipo di tappo e bottiglia ed infine dalla classificazione: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). Ciascuna tipologia di bottiglia di vino è racchiusa in magazzini aventi il numero di bottiglie contenute divisi per la colorazione del vino (rosso, bianco, rosato e spumante).
-Altro prodotto importante è il vino, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione, la tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite la tipologia e la vendemmia. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\
+Altro prodotto importante è il vino, che viene identificato tramite il nome. Inoltre dati importanti del vino sono la gradazione alcolica, il tempo di fermentazione, la tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite il nome e la vendemmia. Importante inoltre tenere traccia se un determinato vino è ancora in fase di produzione o è diventato fuori commercio.\\
 L'uva proviene da un tipo di vigna, identificata da un ID, la quale è coltivata in un determinato vigneto. Importante identificare la data della piantagione della vigna. Del vigneto, anch'esso identificato tramite un ID è utile identificatore l'indirizzo di locazione e il tipo di terreno di piantagione.\\
 Essendo una cantina molto grossa l'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
-I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori.
+I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale, la partita IVA e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori.
 I tappi vengono rappresentati tramite la forma ed il materiale, le bottigle da capacità e colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito.\\
 Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un ordine di vendità. Per l'ordine, identificato univocamente da un ID, è utile rappresentare la data in cui è stato fatto ed il prezzo totale (rappresentato dal prezzo delle bottiglie acquistate più il prezzo di spedizione).\\
 Ogni ordine è affidato ad un corriere il quale viene rappresentato tramite un ID ed un nome commerciale. Importante identificare la data  di spedizione e di ricezione dell'ordine.\\
