--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -23,7 +23,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD UVA}} \\
 		\midrule
-		La tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite la tipologia e la vendemmia. L'uva proviene da un tipo di vigna. L'uva è fornita da aziende esterne.\\
+		La tipologia di uva con cui è stata prodotta, caratterizzata dalla vedemmia (data raccolta) e dal colore. L'uva viene identificata tramite il nome e la vendemmia. L'uva proviene da un tipo di vigna. L'uva è fornita da aziende esterne.\\
 		\bottomrule
 	\end{tabular}
 
@@ -54,7 +54,7 @@
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A FORNITORE}} \\
 		\midrule
 		L'uva è fornita da aziende esterne. Alcune di queste aziende fanno comunque parte del gruppo \emph{Nome Cantina}, ma sono gestite esternamente. Esistono fornitori di uva, bottglie e tappi.
-I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito\\
+I fornitori sono identificati tramite un identificativo univoco. Inoltre hanno un nome commerciale, la partita IVA e hanno il loro prezzo per prodotto; specificatamente hanno il prezzo al Kg per i fornitori di uva e prezzo al prodotto (tappo o bottiglia) per le altre due tipologie di fornitori. Per ogni fornitura va identificata la data, il prezzo e la quantità del prodotto fornito\\
 		\bottomrule
 	\end{tabular}
 	
