--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -43,7 +43,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo & Descrizione \\
 		\midrule
-		\textbf{Tipologia} & VARCHAR &  Identifica univocamente il tipo d'uva\\
+		\textbf{Nome} & VARCHAR &  Identifica univocamente il tipo d'uva\\
 		\midrule
 		\textbf{AnnoRaccolta} & INTEGER & Anno in cui viene raccolta l'uva \\
 		\midrule
@@ -94,6 +94,7 @@ Il simbolo $\gets$ identifica una generalizzazione completa, cioè l'\textbf{ent
 	\textbf{Id} & VARCHAR &  Identifica univocamente il fornitore\\
 	\midrule
 	Nome & VARCHAR &  Identifica il nome commerciale del fornitore\\
+	PartitaIVA & VARCHAR &  Identifica la partita IVA del fornitore\\
 	\bottomrule
 \end{tabular}
 	
