--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -215,7 +215,7 @@
 
 
 \begin{itemize}
-	\item \underline{LineaProduttiva - Dipendente}: \textbf{Lavora}*
+	\item \underline{LineaProduttiva - Dipendente}: \textbf{Turno}*
 	
 	\begin{itemize}
 		\item In una linea produttiva possono lavorare da uno a molteplici dipendenti (1,N)
