--- a/src/progettazioneLogica/accorpamento_entita.tex
+++ b/src/progettazioneLogica/accorpamento_entita.tex
@@ -3,5 +3,5 @@ Si è deciso di aggiungere l'entità \emph{Indirizzo} perchè sembrava la scelta
 
 \begin{flushleft}
 \textbf{\large{Date}}\\
-Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}.
+Qualsiasi \emph{data} e' stata trasformata in un attributo singolo visto che viene rappresentato con il tipo \textbf{DATE}. In particolare si è deciso di modificare l'attributo \textbf{DataUltManutenzione} dell'entità \emph{Macchinario} in una chiave referenziale verso l'attributo \textbf{ID} della relazione \emph{Manutenzione}, visto che è significativo risalire ai dati dell'ultima manutenzione, in particolare alla \emph{data}. 
 \end{flushleft}
